# Tinympc_cuda

./: CMakeLists.txt  Untitled Diagram.drawio  ggg.cpp  test.txt
examples/: CMakeLists.txt  cpu.cu  cpu_test.cpp  cuda_test.cpp  energy_test.cu  gpu.cu  quadrotor_hovering.cpp  quadrotor_tracking.cpp  quadrotor_tracking.cu  same_function_test.cu
src/tinympc/: CMakeLists.txt  admm.cpp  admm.hpp  admm_cuda.cu  admm_cuda.cuh  admm_kernel.cu  admm_kernel.cuh  note.txt  types.hpp
test/: CMakeLists.txt  test1.cu
tools/: draw_energy.py
